--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>User Management and Property Wizard</title>
+      <title>☀️ Sundap Properties</title>
+      <link rel="icon" type="image/svg+xml" href="/favicon-simple.svg" />
+      <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+      <link rel="apple-touch-icon" href="/favicon-simple.svg" />
     </head>
 
     <body>
